Fix visual bug with vertical spacing in event summary

--- a/imports/stylesheets/events/event.import.styl
+++ b/imports/stylesheets/events/event.import.styl
@@ -141,6 +141,8 @@ $max-event-details-width = $max-ui-width+300
     &.not-available
       color $m-gray
       margin-top -10px
+      &:first-of-type
+        margin-top 0
     .fa
       font-size 95%
 
